Revert "reformat codebase"
This reverts commit 0479fedaad9ef4e70d358f27d8421a30c1f2aad1.